# nn

./: CMakeLists.txt  LICENSE  README.md
assets/models/: untitled.ply
assets/textures/: wall.dds  wall1.dds
engine/include/: game.hpp  prerequisites.hpp
engine/include/graph/: mesh.hpp  renderer.hpp  structs.hpp
engine/include/io/: data_loader.hpp  user_input.hpp
engine/include/objects/: camera.hpp  object.hpp
engine/include/scene/: iscene.hpp
engine/src/: game.cpp
engine/src/graph/: mesh.cpp  renderer.cpp
engine/src/io/: data_loader.cpp  user_input.cpp
engine/src/objects/: camera.cpp  object.cpp
engine/src/scene/: iscene.cpp
game/include/scene/: game_scene.hpp
game/src/: main.cpp
game/src/scene/: game_scene.cpp
